--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <b><span style="font-family:SimSun;font-size:10pt;"></span></b></div>
 
             <div class="MsoNormal">
-                <b><span style="font-family:SimSun;font-size:10pt;">验证时点：2019-01-24 16:29:09 </span></b>
+                <b><span style="font-family:SimSun;font-size:10pt;">验证时点： </span></b>
             </div>
             <div class="MsoNormal"><b><span style="font-family:SimSun;font-size:10pt;">特别提示：</span></b>
                 <b><span style="font-family:SimSun;font-size:10pt;"></span></b></div>
@@ -188,4 +188,31 @@
 
 
 
-<div id="cli_dialog_div"></div></body></html>
+<div id="cli_dialog_div"></div>
+     <script>
+    Date.prototype.Format = function(fmt) {
+        var o = {
+        "M+" : this.getMonth()+1, //月份
+        "d+" : this.getDate(), //日
+        "h+" : this.getHours(), //小时
+        "m+" : this.getMinutes(), //分
+        "s+" : this.getSeconds(), //秒
+        "q+" : Math.floor((this.getMonth()+3)/3), //季度
+        "S" : this.getMilliseconds() //毫秒
+        };
+        if(/(y+)/.test(fmt))
+        fmt=fmt.replace(RegExp.$1, (this.getFullYear()+"").substr(4 - RegExp.$1.length));
+        for(var k in o)
+        if(new RegExp("("+ k +")").test(fmt))
+        fmt = fmt.replace(RegExp.$1, (RegExp.$1.length==1) ? (o[k]) : (("00"+ o[k]).substr((""+ o[k]).length)));
+        return fmt;
+    }
+ 
+    var today = new Date();
+    var content = "验证时点："+ today.Format("yyyy-MM-dd hh:mm:ss")
+    var time = document.getElementById('time')
+
+    $('#time').html(content)
+  
+    </script>
+    </body></html>
