--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <b><span style="font-family:SimSun;font-size:10pt;"></span></b></div>
 
             <div class="MsoNormal">
-                <b><span style="font-family:SimSun;font-size:10pt;">验证时点： </span></b>
+                <b><span id='time' style="font-family:SimSun;font-size:10pt;">验证时点： </span></b>
             </div>
             <div class="MsoNormal"><b><span style="font-family:SimSun;font-size:10pt;">特别提示：</span></b>
                 <b><span style="font-family:SimSun;font-size:10pt;"></span></b></div>
