--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
             #qrcode{
                 position: absolute;;
                 width: 80px;
-                top:-80px;
+                top:-85px;
                 right: 10px;
                 display: inline;
 
+            }
+            .warning .MsoNormal{
+                margin: 0;
+                height: auto;
+            }
+            table{
+                border-collapse:collapse !important;
+            }
+            .warning td{
+                border: none !important;
             }
         }
         .qrcode_wrap{
