--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
             href=".">
 
 
-        <!-- <link href="./bootstrap.css" rel="stylesheet"> -->
-        <!-- <link href="./example-fluid-layout.css" rel="stylesheet"> -->
+        <link href="./bootstrap.css" rel="stylesheet">
+        <link href="./example-fluid-layout.css" rel="stylesheet">
         <script src="./findByCode_files/jquery.js"></script>
         <!-- 包括所有已编译的插件 -->
         <script src="./findByCode_files/bootstrap.min.js"></script>
